# promptly

./: .coveragerc  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_QUICKSTART.md  MANIFEST.in  Makefile  OPTIMIZER_README.md  README.md  mypy.ini  promptly_traces.db  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: ci.yml  dependencies.yml  release.yml
examples/: optimizer_example.py  quality_optimization_example.py  test_cases_template.json
examples/test_cases/: cs_email_classification.json  multi_hop.json  test_cases_template.json
promptly/: __init__.py
promptly/cli/: main.py
promptly/core/: __init__.py  client_types.py  clients.py  env.py  optimizer.py  runner.py  templates.py  tracer.py
promptly/core/utils/: ai.py  env.py
tests/: __init__.py  conftest.py  test_cli.py
tests/integration/: __init__.py  test_integration.py
tests/unit/: __init__.py  test_clients.py  test_llm_response.py  test_optimizer.py  test_prompt_template.py  test_runner.py  test_tracer.py
